[package]
name = "sutp"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
bytes = "0.4.11"
flate2 = "1.0.5"
futures = "0.1.25"
lazy_static = "1.2.0"
log = "0.4.6"
rand = "0.6.1"
tokio = "0.1.13"

[dev-dependencies]
env_logger = "0.6.0"
